# my-chat-gpt

./: .gitignore  README.md  angular.json  package-lock.json  package.json  tailwind.config.js
src/: app-routing.module.ts  app.component.ts  app.module.ts  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/conversation/: conversation.component.html  conversation.component.ts
src/core/: openai.service.ts
src/home/: home.component.html  home.component.ts
src/message/: message.component.html  message.component.ts
src/send-message/: send-message.component.html  send-message.component.spec.ts  send-message.component.ts
src/services/: openai.service.ts
